--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "name": "first_project",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@plated/plated_kit": "^0.0.3",
+    "@rails/webpacker": "3.5",
+    "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
